bin_PROGRAMS = xc
xc_SOURCES = main.c xc_win.c xc_u8.c \
             xc_render.c \
             xc_render_dir_full.c \
             xc_render_keys.c \
             xc_cmdline.c \
             xc_timer.c \
             xc_async.c \
             xc_render_output.c

xc_LDADD = @CURSES_LIB@
xc_CFLAGS = -I./include
